<resources>
    <string name="app_name">Carb Counter</string>
    <!-- Strings related to login -->
    <string name="prompt_email">‎      ‎      ‏‏‎Email</string>
    <string name="prompt_password">‎      ‏‏‎‎      ‏‏‎Password</string>
    <string name="action_sign_in">INGRESAR</string>
    <string name="action_password">Restaurar contraseña</string>
    <string name="action_register">No tengo cuenta, quiero registrarme</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="welcome">"Bienvenid@!"</string>
    <string name="invalid_username">Usuario no válido</string>
    <string name="invalid_password">La contraseña debe ser estar entre 8 y 11 caracteres </string>
    <string name="login_failed">"Fallo al logearse"</string>
    <string name="nombrecompleto">Nombre completo</string>.



</resources>